--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -227,6 +227,16 @@ upstream_recursive_servers:
 #    tls_pubkey_pinset:
 #      - digest: "sha256"
 #        value: 7ftvIkA+UeN/ktVkovd/7rPZ6mbkhVI7/8HnFJIiLa4=
+## Adguard Default servers
+#  - address_data: 176.103.130.130
+#    tls_auth_name: "dns.adguard.com"
+#  - address_data: 176.103.130.131
+#    tls_auth_name: "dns.adguard.com"
+## Adguard Family Protection servers
+#  - address_data: 176.103.130.132
+#    tls_auth_name: "dns-family.adguard.com"
+#  - address_data: 176.103.130.134
+#    tls_auth_name: "dns-family.adguard.com"
 ### Test servers ###
 ## A Surfnet/Sinodun server supporting TLS 1.2 and 1.3
 #  - address_data: 145.100.185.18
@@ -323,6 +333,16 @@ upstream_recursive_servers:
 #    tls_auth_name: "cloudflare-dns.com"
 #  - address_data: 2606:4700:4700::1001
 #    tls_auth_name: "cloudflare-dns.com"
+## Adguard Default servers
+#  - address_data: 2a00:5a60::ad1:0ff
+#    tls_auth_name: "dns.adguard.com"
+#  - address_data: 2a00:5a60::ad2:0ff
+#    tls_auth_name: "dns.adguard.com"
+## Adguard Family Protection servers
+#  - address_data: 2a00:5a60::bad1:0ff
+#    tls_auth_name: "dns-family.adguard.com"
+#  - address_data: 2a00:5a60::bad2:0ff
+#    tls_auth_name: "dns-family.adguard.com"
 ### Test servers ###
 ## The Uncensored DNS server
 #  - address_data: 2a01:3a0:53:53::0
