Rework quoting on CPPFLAGS to work with directories containing spaces.
On Windows, for a build to be packaged in a MSI where the MSI puts stubby.yaml into "C:\Program Files\stubby", I wanted to set sysconfdir to "C:\Program Files". This causes the make to break with inadequate quoting.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,4 +6,4 @@ stubby_SOURCES = stubby.c yaml/convert_yaml_to_json.c sldns/sbuffer.c
 else
 stubby_SOURCES = stubby.c
 endif
-AM_CPPFLAGS = -DSTUBBYCONFDIR=\"$(sysconfdir)/stubby\" -DRUNSTATEDIR=\"$(runstatedir)\"
+AM_CPPFLAGS = -DSTUBBYCONFDIR='"$(sysconfdir)/stubby"' -DRUNSTATEDIR='"$(runstatedir)"'
