--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -530,3 +530,16 @@ upstream_recursive_servers:
 #    tls_pubkey_pinset:
 #      - digest: "sha256"
 #        value: wTeXHM8aczvhRSi0cv2qOXkXInoDU+2C+M8MpRyT3OI=
+## Foundation for Applied Privacy 
+#  - address_data: 37.252.185.232
+#    tls_port: 443
+#    tls_auth_name: "dot1.appliedprivacy.net"
+#  - address_data: 2a00:63c1:a:229::3
+#    tls_port: 443
+#    tls_auth_name: "dot1.appliedprivacy.net"
+#  - address_data: 109.70.100.100
+#    tls_port: 443
+#    tls_auth_name: "dot2.appliedprivacy.net"
+#  - address_data: 2a03:e600:100::53:1
+#    tls_port: 443
+#    tls_auth_name: "dot2.appliedprivacy.net"
