--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -73,7 +73,11 @@ round_robin_upstreams: 1
 # EDNS0 option for keepalive idle timeout in milliseconds as specified in
 # https://tools.ietf.org/html/rfc7828
 # This keeps idle TLS connections open to avoid the overhead of opening a new
-# connection for every query.
+# connection for every query. Note that if a given server doesn't implement 
+# EDNS0 keepalive and uses an idle timeout shorter than this stubby will backoff
+# from using that server because the server is always closing the connection.
+# This can degrade performance for certain configurations so reducing the
+# idle_timeout to below that of that lowest server value is recommended.
 idle_timeout: 10000
 
 # Control the maximum number of connection failures that will be permitted
@@ -176,6 +180,13 @@ listen_addresses:
 #       value: Base64 encoded value of the sha256 fingerprint of the public
 #              key
 #   tls_port: Port for TLS (default is 853)
+
+# To always use the DHCP resolvers provided by the local network in Opportunistic
+# mode then
+# 1) In the dns_transport_list after TLS add UDP then TCP
+# 2) Change to tls_authentication: GETDNS_AUTHENTICATION_NONE
+# 3) Remove all the upstream_recursive_servers listed below
+
 upstream_recursive_servers:
 ############################ DEFAULT UPSTREAMS  ################################
 ####### IPv4 addresses ######
