Fix misleading comment on trust anchor config

--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -154,8 +154,8 @@ listen_addresses:
 # in milliseconds (which defaults to two and a half seconds).
 # trust_anchors_backoff_time: 2500
 
-# Specify the location of the installed trust anchor file (leave commented out
-# for zero configuration DNSSEC)
+# Specify the location of the installed trust anchor file to override the 
+# default location (see above)
 # dnssec_trust_anchors: "/etc/unbound/getdns-root.key"
 
 
