--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,13 +44,6 @@ install(DIRECTORY
   )
 set(STUBBYCONFDIR "${RUNSTATEDIR}/stubby")
 
-# Are we being built from getdns?
-if (TARGET getdns)
-  set(getdns_lib "getdns")
-else ()
-  find_package(Getdns "1.5.0" REQUIRED)
-  set(getdns_lib "Getdns::Getdns")
-endif ()
 find_package(Libyaml REQUIRED)
 
 if (WIN32)
@@ -79,8 +72,16 @@ add_executable(stubby
   src/yaml/convert_yaml_to_json.c
   src/sldns/sbuffer.c
   )
+
 target_include_directories(stubby PRIVATE src ${CMAKE_CURRENT_BINARY_DIR})
-target_link_libraries(stubby PRIVATE ${getdns_lib} Libyaml::Libyaml)
+target_link_libraries(stubby PRIVATE Libyaml::Libyaml)
+# Are we being built from getdns? If so, use the build tree getdns.
+if (TARGET getdns)
+  target_link_libraries(stubby PRIVATE getdns)
+else ()
+  find_package(Getdns "1.5.0" REQUIRED)
+  target_link_libraries(stubby Getdns::Getdns)
+endif ()
 set_property(TARGET stubby PROPERTY C_STANDARD 11)
 
 install(TARGETS stubby DESTINATION bin)
