--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -239,6 +239,7 @@ upstream_recursive_servers:
 #  - address_data: 9.9.9.10
 #    tls_auth_name: "dns.quad9.net"
 ## Cloudflare 1.1.1.1 and 1.0.0.1
+## (NOTE: recommend reducing idle_timeout to 9000 if using Coudflare)
 #  - address_data: 1.1.1.1
 #    tls_auth_name: "cloudflare-dns.com"
 #  - address_data: 1.0.0.1
@@ -368,6 +369,7 @@ upstream_recursive_servers:
 #  - address_data: 2620:fe::10
 #    tls_auth_name: "dns.quad9.net"
 ## Cloudflare servers
+## (NOTE: recommend reducing idle_timeout to 9000 if using Coudflare)
 #  - address_data: 2606:4700:4700::1111
 #    tls_auth_name: "cloudflare-dns.com"
 #  - address_data: 2606:4700:4700::1001
