--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,12 @@ endif ()
 
 set(PACKAGE "stubby")
 set(PACKAGE_NAME "Stubby")
-set(PACKAGE_VERSION "0.2.6")
+set(PACKAGE_VERSION "0.3.0")
 set(PACKAGE_BUGREPORT "team@getdnsapi.net")
+set(RELEASE_CANDIDATE "-beta.1")
 
-set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
-set(PACKAGE_TARNAME "${PACKAGE}-${PACKAGE_VERSION}")
+set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
+set(PACKAGE_TARNAME "${PACKAGE}-${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
 
 set(STUBBY_PACKAGE "${PACKAGE}")
 set(STUBBY_PACKAGE_STRING "${PACKAGE_STRING}")
