--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -347,7 +347,7 @@ upstream_recursive_servers:
 #        value: sG6kj+XJToXwt1M6+9BeCz1SOj/1/mdZn56OZvCyZZc=
 ## Foundation for Applied Privacy 
 #  - address_data: 37.252.185.232
-#    tls_auth_name: "dot1.appliedprivacy.net"
+#    tls_auth_name: "dot1.applied-privacy.net"
 # ibksturm testserver
 #  - address_data: 178.82.102.190
 #    tls_auth_name: "ibksturm.synology.me"
@@ -470,7 +470,7 @@ upstream_recursive_servers:
 #        value: sG6kj+XJToXwt1M6+9BeCz1SOj/1/mdZn56OZvCyZZc=
 ## Foundation for Applied Privacy 
 #  - address_data: 2a00:63c1:a:229::3
-#    tls_auth_name: "dot1.appliedprivacy.net"
+#    tls_auth_name: "dot1.applied-privacy.net"
 ## # OARC. Note: this server currently doesn't support strict mode!
 ##   - address_data: 2620:ff:c000:0:1::64:25
 ##     tls_auth_name: "tls-dns-u.odvr.dns-oarc.net"
@@ -553,7 +553,7 @@ upstream_recursive_servers:
 ## Foundation for Applied Privacy 
 #  - address_data: 37.252.185.232
 #    tls_port: 443
-#    tls_auth_name: "dot1.appliedprivacy.net"
+#    tls_auth_name: "dot1.applied-privacy.net"
 #  - address_data: 2a00:63c1:a:229::3
 #    tls_port: 443
-#    tls_auth_name: "dot1.appliedprivacy.net"
+#    tls_auth_name: "dot1.applied-privacy.net"
