Move generally useful function into new util.c.
But _getdns_sterror() is defined in libgetdns on Sid, so use our own
name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ endif ()
 add_executable(stubby
   src/stubby.c
   src/log.c
+  src/util.c
   src/yaml/convert_yaml_to_json.c
   src/sldns/sbuffer.c
   )
