Add icon to stubby executable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ if (STUBBY_ON_WINDOWS)
   set(VER_PRODUCTVERSION "${PACKAGE_VERSION_MAJOR},${PACKAGE_VERSION_MINOR},${PACKAGE_VERSION_RELEASE},0")
   set(VER_PRODUCTVERSION_STR "${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
   configure_file(src/windows/stubby.rc.in stubby.rc @ONLY)
+  configure_file(src/windows/stubby.ico stubby.ico COPYONLY)
   if (ENABLE_WINDOWS_SERVICE)
     configure_file(src/windows/stubres.rc.in stubres.rc @ONLY)
   endif ()
