--- a/src/windows/stubres.rc.in
+++ b/src/windows/stubres.rc.in
@@ -33,6 +33,8 @@
 #define VER_DBG 0
 #endif
 
+1 ICON "stubby.ico"
+
 1 VERSIONINFO
 FILEVERSION     @VER_PRODUCTVERSION@
 PRODUCTVERSION  @VER_PRODUCTVERSION@
