service.h is produced by message compiler and dependency of service.c.
This ensures it will be generated before trying to compile service.c.
Previously this was not explicit, and the right -j might mean service.c
was compiled before service.h was generated.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,7 +115,7 @@ if (STUBBY_ON_WINDOWS)
   endif ()
 
   add_custom_command(
-    OUTPUT service.rc
+    OUTPUT service.rc service.h
     MAIN_DEPENDENCY src/windows/service.mc
     COMMAND ${CMAKE_MC_COMPILER}
     ARGS -U
@@ -142,7 +142,7 @@ if (STUBBY_ON_WINDOWS)
   target_sources(stubby PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/stubby.rc)
 endif ()
 if (ENABLE_WINDOWS_SERVICE)
-  target_sources(stubby PRIVATE src/windows/service.c)
+  target_sources(stubby PRIVATE src/windows/service.c ${CMAKE_CURRENT_BINARY_DIR}/service.h)
   target_include_directories(stubby PRIVATE src/windows ${CMAKE_CURRENT_BINARY_DIR})
 
   add_library(stubres SHARED
