Add option to set Windows build number from git.
The build number/patch level will be 0 by default, otherwise the number
of commits since the last tag.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ set(STUBBY_PACKAGE "${PACKAGE}")
 set(STUBBY_PACKAGE_STRING "${PACKAGE_STRING}")
 
 if (WIN32)
+  option(PATCH_LEVEL_GIT "Get patch level from git." OFF)
+
   set(STUBBY_ON_WINDOWS 1)
   project (stubby VERSION ${PACKAGE_VERSION} LANGUAGES C RC)
 else()
@@ -78,6 +80,14 @@ if (STUBBY_ON_WINDOWS)
   endif (NOT CMAKE_MC_COMPILER)
   message(STATUS "Found message compiler: ${CMAKE_MC_COMPILER}")
   mark_as_advanced(CMAKE_MC_COMPILER)
+
+  set(PACKAGE_VERSION_PATCH 0)
+  if (PATCH_LEVEL_GIT)
+    execute_process(COMMAND git describe --long OUTPUT_VARIABLE ver)
+    if (ver)
+      string(REGEX REPLACE "v[^-]*-([0-9]+)-.*" "\\1" PACKAGE_VERSION_PATCH ${ver})
+    endif ()
+  endif ()
 else ()
   set(ENABLE_WINDOWS_SERVICE OFF)
 endif ()
@@ -110,7 +120,7 @@ set(ETCDIR "${STUBBYCONFDIR}")
 configure_file(doc/stubby.1.in stubby.1 @ONLY)
 
 if (STUBBY_ON_WINDOWS)
-  set(VER_PRODUCTVERSION "${PACKAGE_VERSION_MAJOR},${PACKAGE_VERSION_MINOR},${PACKAGE_VERSION_RELEASE},0")
+  set(VER_PRODUCTVERSION "${PACKAGE_VERSION_MAJOR},${PACKAGE_VERSION_MINOR},${PACKAGE_VERSION_RELEASE},${PACKAGE_VERSION_PATCH}")
   set(VER_PRODUCTVERSION_STR "${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
   configure_file(src/windows/stubby.rc.in stubby.rc @ONLY)
   configure_file(src/windows/stubby.ico stubby.ico COPYONLY)
