Add package_version output file with the package version.
The intention is to allow the package version to be readily obtained by
scripts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,8 +122,10 @@ configure_file(doc/stubby.1.in stubby.1 @ONLY)
 if (STUBBY_ON_WINDOWS)
   set(VER_PRODUCTVERSION "${PACKAGE_VERSION_MAJOR},${PACKAGE_VERSION_MINOR},${PACKAGE_VERSION_RELEASE},${PACKAGE_VERSION_PATCH}")
   set(VER_PRODUCTVERSION_STR "${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
+  set(PACKAGE_VERSION "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_RELEASE}.${PACKAGE_VERSION_PATCH}")
   configure_file(src/windows/stubby.rc.in stubby.rc @ONLY)
   configure_file(src/windows/stubby.ico stubby.ico COPYONLY)
+  configure_file(package_version.in package_version @ONLY)
   if (ENABLE_WINDOWS_SERVICE)
     configure_file(src/windows/stubres.rc.in stubres.rc @ONLY)
   endif ()
