Update .wxs files for vcpkg OpenSSL 1.1 package.
And parameterise the stubby version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,8 @@ if (STUBBY_ON_WINDOWS)
   configure_file(src/windows/stubby.rc.in stubby.rc @ONLY)
   configure_file(src/windows/stubby.ico stubby.ico COPYONLY)
   configure_file(package_version.in package_version @ONLY)
+  configure_file(windows/stubby-64.wxs.in stubby-64.wxs @ONLY)
+  configure_file(windows/stubby-32.wxs.in stubby-32.wxs @ONLY)
   if (ENABLE_WINDOWS_SERVICE)
     configure_file(src/windows/stubres.rc.in stubres.rc @ONLY)
   endif ()
