Don't forget to install stubres.dll.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,7 +185,10 @@ else ()
 endif ()
 set_property(TARGET stubby PROPERTY C_STANDARD 11)
 
-install(TARGETS stubby DESTINATION bin)
+install(TARGETS stubby RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR} )
+if (ENABLE_WINDOWS_SERVICE)
+  install(TARGETS stubres LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+endif ()
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/stubby.1 DESTINATION share/man/man1)
 install(FILES AUTHORS COPYING ChangeLog NEWS README.md DESTINATION share/doc/stubby)
 
