--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ endif ()
 set(PACKAGE "stubby")
 set(PACKAGE_NAME "Stubby")
 set(PACKAGE_VERSION_MAJOR 0)
-set(PACKAGE_VERSION_MINOR 3)
+set(PACKAGE_VERSION_MINOR 4)
 set(PACKAGE_VERSION_RELEASE 0)
 set(PACKAGE_VERSION "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_RELEASE}")
 set(PACKAGE_BUGREPORT "team@getdnsapi.net")
-set(RELEASE_CANDIDATE "")
+set(RELEASE_CANDIDATE "-rc1")
 
 set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
 set(PACKAGE_TARNAME "${PACKAGE}-${PACKAGE_VERSION}${RELEASE_CANDIDATE}")
