Fix install destination for stubby.exe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ else ()
 endif ()
 set_property(TARGET stubby PROPERTY C_STANDARD 11)
 
-install(TARGETS stubby RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR} )
+install(TARGETS stubby RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} )
 if (ENABLE_WINDOWS_SERVICE)
   install(TARGETS stubres LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif ()
