--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -272,6 +272,9 @@ upstream_recursive_servers:
 #    tls_auth_name: "dns-family.adguard.com"
 #  - address_data: 176.103.130.134
 #    tls_auth_name: "dns-family.adguard.com"
+## Comcast public Beta
+#  - address_data: 96.113.151.145
+#    tls_auth_name: "dot.xfinity.com"
 ### Test servers ###
 ## A Surfnet/Sinodun server supporting TLS 1.2 and 1.3
 #  - address_data: 145.100.185.18
@@ -295,36 +298,6 @@ upstream_recursive_servers:
 #        value: 3IOHSS48KOc/zlkKGtI46a9TY9PPKDVGhE3W2ZS4JZo=
 #      - digest: "sha256"
 #        value: 5zFN3smRPuHIlM/8L+hANt99LW26T97RFHqHv90awjo=
-## dns.larsdebruin.net (formerly dns1.darkmoon.is)
-#  - address_data: 51.15.70.167
-#    tls_auth_name: "dns.larsdebruin.net "
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: AAT+rHoKx5wQkWhxlfrIybFocBu3RBrPD2/ySwIwmvA=
-## dns-tls.bitwiseshift.net
-#  - address_data: 81.187.221.24
-#    tls_auth_name: "dns-tls.bitwiseshift.net"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: YmcYWZU5dd2EoblZHNf1jTUPVS+uK3280YYCdz4l4wo=
-## ns1.dnsprivacy.at
-#  - address_data: 94.130.110.185
-#    tls_auth_name: "ns1.dnsprivacy.at"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: vqVQ9TcoR9RDY3TpO0MTXw1YQLjF44zdN3/4PkLwtEY=
-## ns2.dnsprivacy.at
-#  - address_data: 94.130.110.178
-#    tls_auth_name: "ns2.dnsprivacy.at"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: s5Em89o0kigwfBF1gcXWd8zlATSWVXsJ6ecZfmBDTKg=
-## dns.bitgeek.in
-#  - address_data: 139.59.51.46
-#    tls_auth_name: "dns.bitgeek.in"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: FndaG4ezEBQs4k0Ya3xt3z4BjFEyQHd7B75nRyP1nTs=
 ## Lorraine Data Network  (self-signed cert).
 #  - address_data: 80.67.188.188
 #    tls_pubkey_pinset:
@@ -344,12 +317,6 @@ upstream_recursive_servers:
 ## Foundation for Applied Privacy 
 #  - address_data: 146.255.56.98
 #    tls_auth_name: "dot1.applied-privacy.net"
-## # OARC. Note: this server currently doesn't support strict mode!
-##   - address_data: 184.105.193.78
-##     tls_auth_name: "tls-dns-u.odvr.dns-oarc.net"
-##     tls_pubkey_pinset:
-##       - digest: "sha256"
-##         value: pOXrpUt9kgPgbWxBFFcBTbRH2heo2wHwXp1fd4AEVXI=
 
 ####### IPv6 addresses #######
 ### Anycast services ###
@@ -381,6 +348,9 @@ upstream_recursive_servers:
 #    tls_auth_name: "dns-family.adguard.com"
 #  - address_data: 2a00:5a60::bad2:0ff
 #    tls_auth_name: "dns-family.adguard.com"
+## Comcast public Beta
+#  - address_data: 2001:558:fe21:6b:96:113:151:145
+#    tls_auth_name: "dot.xfinity.com"
 ### Test servers ###
 ## The Uncensored DNS server
 #  - address_data: 2a01:3a0:53:53::0
@@ -416,24 +386,6 @@ upstream_recursive_servers:
 #        value: 3IOHSS48KOc/zlkKGtI46a9TY9PPKDVGhE3W2ZS4JZo=
 #      - digest: "sha256"
 #        value: 5zFN3smRPuHIlM/8L+hANt99LW26T97RFHqHv90awjo=
-## dns-tls.bitwiseshift.net
-#  - address_data: 2001:8b0:24:24::24
-#    tls_auth_name: "dns-tls.bitwiseshift.net"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: YmcYWZU5dd2EoblZHNf1jTUPVS+uK3280YYCdz4l4wo=
-## ns1.dnsprivacy.at
-#  - address_data: 2a01:4f8:c0c:3c03::2
-#    tls_auth_name: "ns1.dnsprivacy.at"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: vqVQ9TcoR9RDY3TpO0MTXw1YQLjF44zdN3/4PkLwtEY=
-## ns2.dnsprivacy.at
-#  - address_data: 2a01:4f8:c0c:3bfc::2
-#    tls_auth_name: "ns2.dnsprivacy.at"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: s5Em89o0kigwfBF1gcXWd8zlATSWVXsJ6ecZfmBDTKg=
 ## Go6Lab
 #  - address_data: 2001:67c:27e4::35
 #    tls_auth_name: "privacydns.go6lab.si"
@@ -459,12 +411,6 @@ upstream_recursive_servers:
 ## Foundation for Applied Privacy 
 #  - address_data: 2a01:4f8:c0c:83ed::1
 #    tls_auth_name: "dot1.applied-privacy.net"
-## # OARC. Note: this server currently doesn't support strict mode!
-##   - address_data: 2620:ff:c000:0:1::64:25
-##     tls_auth_name: "tls-dns-u.odvr.dns-oarc.net"
-##     tls_pubkey_pinset:
-##       - digest: "sha256"
-##         value: pOXrpUt9kgPgbWxBFFcBTbRH2heo2wHwXp1fd4AEVXI=
 
 ####### Servers that listen on port 443 (IPv4 and IPv6) #######
 ### Test servers ###
