--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -83,44 +83,48 @@ idle_timeout: 10000
 
 # Control the maximum number of connection failures that will be permitted
 # before Stubby backs-off from using an individual upstream (default 2)
-# tls_connection_retries: 5
+# tls_connection_retries: 2
 
 # Control the maximum time in seconds Stubby will back-off from using an
 # individual upstream after failures under normal circumstances (default 3600)
-# tls_backoff_time: 300
+# tls_backoff_time: 3600
 
 # Specify the location for CA certificates used for verification purposes are
 # located - this overrides the OS specific default location.
 # tls_ca_path: "/etc/ssl/certs/"
 
-# Limit the total number of outstanding queries permitted
-# limit_outstanding_queries: 100
+# Limit the total number of outstanding queries permitted on one TCP/TLS
+# connection (default is 0, no limit)
+# limit_outstanding_queries: 0
 
 # Specify the timeout in milliseconds on getting a response to an individual
 # request (default 5000)
-# timeout: 1000
+# timeout: 5000
 
 # Set the acceptable ciphers for DNS over TLS.  With OpenSSL 1.1.1 this list is
 # for TLS1.2 and older only. Ciphers for TLS1.3 should be set with the
-# tls_ciphersuites option. This option can also be given per upstream.
+# tls_ciphersuites option. This option can also be given per upstream. 
+# (default as shown)
 # tls_cipher_list: "EECDH+AESGCM:EECDH+CHACHA20"
 
 # Set the acceptable cipher for DNS over TLS1.3. OpenSSL >= 1.1.1 is required
 # for this option. This option can also be given per upstream.
+# (default as shown)
 # tls_ciphersuites: "TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256"
 
 # Set the minimum acceptable TLS version. Works with OpenSSL >= 1.1.1 only.
-# This option can also be given per upstream.
+# This option can also be given per upstream. (default is 1.2)
 # tls_min_version: GETDNS_TLS1_2
 
 # Set the maximum acceptable TLS version. Works with OpenSSL >= 1.1.1 only.
-# This option can also be given per upstream.
+# This option can also be given per upstream. (default is 1.3)
 # tls_max_version: GETDNS_TLS1_3
 
 ################################ LISTEN ADDRESS ################################
 # Set the listen addresses for the stubby DAEMON. This specifies localhost IPv4
 # and IPv6. It will listen on port 53 by default. Use <IP_address>@<port> to
-# specify a different port
+# specify a different port. (Note that due to restrictions within the config
+# file parser, IPv6 address cannot start with `::` )
 listen_addresses:
   - 127.0.0.1
   - 0::1
@@ -132,6 +136,7 @@ listen_addresses:
 # stubby is not able to fetch and validate the DNSSEC trust-anchor itself,
 # (using Zero configuration DNSSEC) stubby will not return answers at all.
 # If DNSSEC validation is required, a trust-anchor is also required.
+# (default is no DNSSEC validation)
 # dnssec: GETDNS_EXTENSION_TRUE
 
 # Stubby tries to fetch and validate the DNSSEC root trust anchor on the fly
