--- a/systemd/stubby.service
+++ b/systemd/stubby.service
@@ -18,6 +18,7 @@ MemoryDenyWriteExecute=true
 NoNewPrivileges=true
 PrivateDevices=true
 PrivateTmp=true
+PrivateUsers=false
 ProtectClock=true
 ProtectControlGroups=true
 ProtectHome=true
